# nyuwaymcpsandbox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
nyuwaymcpsandbox/: __init__.py  pipeline.py
nyuwaymcpsandbox/cli/: main.py
nyuwaymcpsandbox/detection/: engine.py  rules.py  verdict.py
nyuwaymcpsandbox/detection/builtin/: credential_env_access.yaml  destructive_tool_invoked.yaml  file_write_outside_workdir.yaml  outbound_network_from_tool.yaml  pre_tool_network_activity.yaml  sensitive_file_read.yaml  shell_exec_in_tool.yaml  slow_tool_response.yaml  suspicious_dns_tld.yaml
nyuwaymcpsandbox/drivers/: deterministic.py  docker_exec_stream.py  fakes.py  litellm_backend.py  llm_backend.py  llm_driver.py  mcp_client.py  prompt_library.py  stdio_mcp.py  subprocess_stream.py  synth.py
nyuwaymcpsandbox/drivers/prompts/: adversarial_library.yaml
nyuwaymcpsandbox/output/: describe.py  json_report.py  report.py  sarif_report.py  timeline_view.py
nyuwaymcpsandbox/sandbox/: events.py  images.py  monitor.py  orchestrator.py  timeline.py
nyuwaymcpsandbox/sandbox/monitors/: __init__.py  environment.py  filesystem.py  network.py  process.py
nyuwaymcpsandbox/sandbox/preload/: sitecustomize.py
nyuwaymcpsandbox/sources/: __init__.py  _archive.py  github.py  npm.py  pypi.py
tests/: test_cli_smoke.py  test_describe.py  test_detection_engine.py  test_detection_rules.py  test_deterministic.py  test_docker_exec_stream.py  test_environment_monitor.py  test_events.py  test_filesystem_monitor.py  test_images.py  test_json_report.py  test_litellm_backend.py  test_llm_driver.py  test_malicious_fixture.py  test_monitor.py  test_monitors_stubs.py  test_network_monitor.py  test_orchestrator.py  test_pipeline.py  test_process_monitor.py  test_prompt_library.py  test_sarif_report.py  test_sources.py  test_stdio_mcp.py  test_synth.py  test_timeline.py  test_timeline_view.py  test_verdict.py
tests/fixtures/: echo_mcp_server.py  malicious_mcp_server.py
tools/: README.md  dummy-creds-template.env  research_campaign.py  server_list.yaml
